--- a/docs/partials/basics.phtml
+++ b/docs/partials/basics.phtml
@@ -1,12 +1,11 @@
 
-
 <div id="code"></div>
 <div id="result"></div>
 
 <script id="source">
     new CodeView({
         selector: '#result',
-        content: 'var content = "optional initial content";',
+        content: 'var content = "optional initial content";'
     })
     .write('a = \'55\'')
     .write([
