--- a/docs/partials/about.phtml
+++ b/docs/partials/about.phtml
@@ -1,2 +1,17 @@
 
-<iframe src="//ilian-iliev.herokuapp.com/#about" frameborder="0" style="width: 100%; height: 600px;"></iframe>
+<h1 class="col-md-8">About me</h1>
+
+<div class="col-md-8">
+    <br />
+    <p>
+        My name is <strong>Ilian Iliev</strong> and I am web/mobile developer. I have significant knowledge of of JavaScript, jQuery, AJAX, HTML, CSS, UI/UX, Cross-platform applications, PhoneGap, Apache Cordova, WinJS, WinRT, Node.js, MongoDB, PHP, MySQL.
+    </p>
+    <br />
+    <p>
+        Although my academic background is in Economics, I am currently more interested in web and mobile development. I have 4 years of experience under my belt and I am constantly improving my skills in the field.
+    </p>
+    <br />
+    <p>
+        You can find a little bit more about me <a href="http://ilian-iliev.herokuapp.com" target="_blank">here</a>.
+    </p>
+</div>
