--- a/docs/partials/setup.phtml
+++ b/docs/partials/setup.phtml
@@ -16,4 +16,10 @@
     <br />
 
     <div><strong class="fs-20">That`s it !<strong></div>
+
+    <script>
+        $('.setup-wrapper .form-control.width-400').each(function () {
+            $(this).width(parseInt($(this).val().length * 6.5));
+        });
+    </script>
 </div>
