--- a/docs/main.css
+++ b/docs/main.css
@@ -18,15 +18,6 @@ body {
     position: relative;
 }
 
-@media (max-width: 768px) {
-    #code,
-    #result {
-        width: 90%;
-        margin: 30px auto;
-        display: block;
-    }
-}
-
 #code,
 #source {
     /* Persist line endins for innerHTML */
@@ -80,6 +71,15 @@ body {
     padding: 35px;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 /* ----------------------------------------------------- */
 /* ---------------------- Setup ------------------------ */
@@ -94,6 +94,16 @@ body {
     padding: 20px 10px;
 }
 
+
+/* ----------------------------------------------------- */
+/* --------------------- Themes ------------------------ */
+/* ----------------------------------------------------- */
+
+iframe.th-frame {
+    width: 670px;
+    height: 380px;
+    display: block;
+}
 
 /* ----------------------------------------------------- */
 /* ----------------------- 404 ------------------------- */
@@ -250,4 +260,18 @@ body {
     -ms-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
+}
+
+@media (max-width: 768px) {
+    #code,
+    #result {
+        width: 90%;
+        margin: 30px auto;
+        display: block;
+    }
+    iframe.th-frame {
+        width: 100%;
+        height: 405px;
+        display: block;
+    }
 }
