--- a/src/themes/partials/sublime-monokai.scss
+++ b/src/themes/partials/sublime-monokai.scss
@@ -5,9 +5,9 @@ $selection: #383830;
 $normal: #F8F8F2;
 $comment: #75715E;
 
-$color_1: #E6DB74;
-$color_2: #ADD8E6;
-$color_3: #F92672;
-$color_4: #8481C9;
+$color_1: #E6DB74; // strings
+$color_2: #ADD8E6; // var|this|window|document|body|function
+$color_3: #F92672; // new|return|throw|goto|if|else|elseif
+$color_4: #8481C9; // undefined|null|true|false
 
 @import "../main.scss";
